Transform gizmo disappear in very close view #67641

Closed
opened 2019-07-25 08:01:34 +02:00 by Maciej Niezgódka · 9 comments

System Information
Operating system: Windows-10-10.0.15063 64 Bits
Graphics card: Quadro K2200/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.78

Blender Version
Broken: version: 2.83

Short description of error
I noticed, that when I would like to move vertex or something with big zoom, then gizmo disappear suddenly during scrolling.
gizmo_bug.gif

Exact steps for others to reproduce the error
Open attached file and zoom in to the selected point
gizmo_bug.blend

**System Information** Operating system: Windows-10-10.0.15063 64 Bits Graphics card: Quadro K2200/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.78 **Blender Version** Broken: version: 2.83 **Short description of error** I noticed, that when I would like to move vertex or something with big zoom, then gizmo disappear suddenly during scrolling. ![gizmo_bug.gif](https://archive.blender.org/developer/F8321320/gizmo_bug.gif) **Exact steps for others to reproduce the error** Open attached file and zoom in to the selected point [gizmo_bug.blend](https://archive.blender.org/developer/F8321323/gizmo_bug.blend)

Added subscriber: @senteria

Added subscriber: @senteria

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm the problem.
In the latest daily build the bezier's handle doesn't disappear, but the gizmo does.

I can confirm the problem. In the latest daily build the bezier's handle doesn't disappear, but the gizmo does.

Added subscriber: @fclem

Added subscriber: @fclem

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'

Please follow our report guideline and provide an example file.

I cannot reproduce this with latest 2.82 build. (AMD GPU + Linux + free or pro drivers)

Please follow our report guideline and provide an example file. I cannot reproduce this with latest 2.82 build. (AMD GPU + Linux + free or pro drivers)
Germano Cavalcante changed title from Gizmo and curve handles disappear in very close view to Transform gizmo disappear in very close view 2020-02-04 20:09:02 +01:00

This issue was referenced by 79003fa0c4

This issue was referenced by 79003fa0c415abce4bbc6f186e855175fd1b61b5

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-02-05 00:05:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67641
No description provided.