Fix T67641 Gizmo3D: Transform gizmo disappear in very close view

This was caused but a workaround for not selecting the gizmos in camera
view. We lower the threshold to make it work on maximum zoom level.